# search_agent

./: .dockerignore  CLAUDE.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  agent.py  requirements.txt  server.py
backend/agents/: search_agent.py  summary_agent.py
frontend/: Dockerfile  index.html  nginx.conf  style.css
